[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/Gameplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Main.gd" type="Script" id=5]
[ext_resource path="res://src/scenes/Results.tscn" type="PackedScene" id=6]

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=14]
blend_mode = 1

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeIn"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeOut"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "FadeIn"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "FadeOut"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "FadeIn"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "FadeOut"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 3 )]
position = Vector2( 800, 450 )

[node name="Menu" parent="." instance=ExtResource( 1 )]
rect_min_size = Vector2( 1600, 900 )

[node name="Gameplay" parent="." instance=ExtResource( 2 )]
visible = false

[node name="SoundMove" parent="Gameplay/LeftPlayArea/Tiles/Cursor" index="0"]
bus = "Left"

[node name="SoundOk" parent="Gameplay/LeftPlayArea/Tiles/Cursor" index="1"]
bus = "Left"

[node name="SoundMove" parent="Gameplay/RightPlayArea/Tiles/Cursor" index="0"]
bus = "Right"

[node name="SoundOk" parent="Gameplay/RightPlayArea/Tiles/Cursor" index="1"]
bus = "Right"

[node name="Left" parent="Gameplay/Minimap" index="0"]
material = SubResource( 13 )

[node name="Right" parent="Gameplay/Minimap" index="1"]
material = SubResource( 14 )

[node name="Transitions" type="Control" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2

[node name="MenuTransition" type="ColorRect" parent="Transitions"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Fade" type="AnimationPlayer" parent="Transitions/MenuTransition"]
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 1 )
anims/RESET = SubResource( 3 )

[node name="LeftTransition" type="ColorRect" parent="Transitions"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0.7, 0.7, 1 )

[node name="Fade" type="AnimationPlayer" parent="Transitions/LeftTransition"]
anims/FadeIn = SubResource( 5 )
anims/FadeOut = SubResource( 4 )
anims/RESET = SubResource( 6 )

[node name="RightTransition" type="ColorRect" parent="Transitions"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.7, 0.7, 1, 1 )

[node name="Fade" type="AnimationPlayer" parent="Transitions/RightTransition"]
anims/FadeIn = SubResource( 8 )
anims/FadeOut = SubResource( 7 )
anims/RESET = SubResource( 9 )

[node name="TieTransition" type="ColorRect" parent="Transitions"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Fade" type="AnimationPlayer" parent="Transitions/TieTransition"]
anims/FadeIn = SubResource( 10 )
anims/FadeOut = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="Results" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Winner" parent="Results/Container" index="0"]
margin_top = 331.0
margin_bottom = 389.0

[node name="Padding1" parent="Results/Container" index="1"]
margin_top = 393.0
margin_bottom = 425.0

[node name="ScoreLabel" parent="Results/Container" index="2"]
margin_top = 429.0
margin_bottom = 430.0

[node name="Scores" parent="Results/Container" index="3"]
margin_top = 434.0
margin_bottom = 464.0

[node name="Padding2" parent="Results/Container" index="4"]
margin_top = 468.0
margin_bottom = 500.0

[node name="RoundsLabel" parent="Results/Container" index="5"]
margin_top = 504.0
margin_bottom = 534.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="Rounds" parent="Results/Container" index="6"]
margin_top = 538.0
margin_bottom = 568.0

[connection signal="color_changed" from="Menu/HContainer/VContainer/Colors/Left Player/ColorPicker" to="." method="_on_LeftColorPicker_color_changed"]
[connection signal="color_changed" from="Menu/HContainer/VContainer/Colors/Right Player/ColorPicker" to="." method="_on_RightColorPicker_color_changed"]
[connection signal="button_up" from="Menu/HContainer/VContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="timeout" from="Gameplay/Timer" to="." method="_on_PlayTimer_timeout"]
[connection signal="animation_finished" from="Transitions/MenuTransition/Fade" to="." method="_on_MenuFade_animation_finished"]
[connection signal="animation_finished" from="Transitions/LeftTransition/Fade" to="." method="_on_SideFade_animation_finished"]
[connection signal="animation_finished" from="Transitions/RightTransition/Fade" to="." method="_on_SideFade_animation_finished"]
[connection signal="animation_finished" from="Transitions/TieTransition/Fade" to="." method="_on_SideFade_animation_finished"]
[connection signal="timeout" from="Results/Timer" to="." method="_on_ResultsTimer_timeout"]

[editable path="Background"]
[editable path="Menu"]
[editable path="Gameplay"]
[editable path="Gameplay/LeftPlayArea"]
[editable path="Gameplay/RightPlayArea"]
[editable path="Results"]
